--- a/README
+++ b/README
@@ -10,7 +10,7 @@ ftp://ftp.info-zip.org/pub/infozip/
 1 Installing from a Unix-like distro
 ------------------------------------
 shell>gunzip Text-Table-Manifold-1.00.tgz
-shell>tar mxvf Text-Table-Manifold-1.00.tar
+shell>tar xvf Text-Table-Manifold-1.00.tar
 
 On Unix-like systems, assuming you have installed Module::Build V 0.25+:
 
